Log4j vulnerability fix and postgres db support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
-#DataBase Connections
+#Postgres DataBase Connections
+DB_NAME=postgres
 DB_URL={{dburl}}
 DB_USER={{username}}
 DB_PWD={{password}}
+DB_DRIVER=org.postgresql.Driver
 DB_MAX_CONNECTIONS=5
+
+#Oracle Database
+#DB_NAME=oracle
+#DB_URL={{dburl}}
+#DB_USER={{username}}
+#DB_PWD={{password}}
+#DB_DRIVER="oracle.jdbc.driver.OracleDriver"
+#DB_MAX_CONNECTIONS=5
